--- a/app/Resources/views/includes/button_to_top.html.twig
+++ b/app/Resources/views/includes/button_to_top.html.twig
@@ -1,10 +1,12 @@
 <!-- Button to top -->
 
-<div id="button_to_top" data-menuanchor="mainSection" class="opcatiy0">
-	<a href="#mainSection" style="no_style_a">
-		<button class="btn btn-to-top">
-			<img src="{{ asset('img/system/defaults/up_arrow.png') }}" alt="" class="btn_right_arrow"/>
-			<br/>
-		</button>
-	</a>
+<div class="hidden-xs">
+	<div id="button_to_top" data-menuanchor="mainSection" class="opcatiy0">
+		<a href="#mainSection" style="no_style_a">
+			<button class="btn btn-to-top">
+				<img src="{{ asset('img/system/defaults/up_arrow.png') }}" alt="" class="btn_right_arrow"/>
+				<br/>
+			</button>
+		</a>
+	</div>
 </div>
