--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -82,33 +82,31 @@ h2
 }
 h2 span {
 	margin: 0 !important;
+	margin-top: -8px !important;
 	padding: 0 !important;
 	font-weight: 120 !important;
 }
 @media (min-width: 1401px) {
 	h2 {
-		padding-top: 8px !important;
-		margin-bottom: 8px !important;
-		font-size: 2.1em;
+		/*margin-bottom: 4px !important;*/
+		font-size: 2em;
 	}
 	h2 span {
-		font-size: 0.8em;
+		font-size: 0.6em;
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	h2 {
-		padding-top: 3px !important;
-		margin-bottom: 3px !important;
+		/*margin-bottom: 3px !important;*/
 		font-size: 1.6em;
 	}
 	h2 span {
-		font-size: 0.7em;
+		font-size: 0.6em;
 	}
 }
 @media (max-width: 992px) {
 	h2 {
-		padding-top: 0px !important;
-		margin-bottom: 0px !important;
+		/*margin-bottom: 0px !important;*/
 		font-size: 1.3em;
 	}
 	h2 span {
@@ -143,22 +141,27 @@ h4
 {	
 	padding: 0;
 	margin: 0;
-	margin-bottom: 10px;
+	margin-bottom: 6px !important;
 	text-align: center;
 }
 @media (min-width: 1401px) {
 	h4 {
-		/*font-size: 1.5em;*/
+		font-size: 1.3em;
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	h4 {
-		/*font-size: 1.1em;*/
+		font-size: 1.2em;
 	}
 }
-@media (max-width: 992px) {
+@media (min-width: 479px) and (max-width: 992px) {
 	h4 {
-		/*font-size: 0.9em;*/
+		font-size: 1.1em;
+	}
+}
+@media (max-width: 478px) {
+	h4 {
+		font-size: 0.95em;
 	}
 }
 
@@ -170,12 +173,12 @@ h5 {
 }
 @media (min-width: 901px) {
 	h5 {
-		/*font-size: 1.4em;*/
+		font-size: 1.3em;
 	}
 }
 @media (max-width: 992px) {
 	h5 {
-		/*font-size: 1em;*/
+		font-size: 1.1em;
 	}
 }
 
@@ -209,25 +212,25 @@ hr {
 	font-weight: 800;
 }
 .font1em {
-	/*font-size: 1em;*/
+	font-size: 1em;
 }
 .font10 {
-	/*font-size: 10px;*/
+	font-size: 10px;
 }
 .font12 {
-	/*font-size: 12px;*/
+	font-size: 12px;
 }
 .font14 {
-	/*font-size: 14px;*/
+	font-size: 14px;
 }
 .font16 {
-	/*font-size: 16px;*/
+	font-size: 16px;
 }
 .font18 {
-	/*font-size: 18px;*/
+	font-size: 18px;
 }
 .font20 {
-	/*font-size: 20px;*/
+	font-size: 20px;
 }
 .paragraph {
 	margin-left: 5%;
@@ -374,9 +377,17 @@ strong {
 	color: white !important;
 }
 
+.navbar {
+	padding: 0 !important;
+	margin: 0 !important;
+}
 .navbar-brand {
 	font-weight: 500 !important;
 	font-size: 1em !important;
+	z-index: 99999 !important ;
+}
+.navbar-collapse, .navbar-inverse {
+	background-color: rgba(41,41,41,0.95) !important;
 }
 
 .user_img_header {
@@ -436,8 +447,15 @@ strong {
 	border-radius: 0;
 	border-bottom: 1.5px solid transparent;
 	border-top: 1.5px solid transparent;
-
+	box-shadow: none;
 	color: inherit;
+}
+.btn-log:hover, .btn-log-active {
+	background-color: transparent;
+	color: inherit;
+	border-bottom: 1.5px solid white;
+	border-top: 1.5px solid white;
+	box-shadow: none;
 }
 @media (min-width: 1401px) {
 	.btn-log {
@@ -448,28 +466,60 @@ strong {
 @media (min-width: 993px) and (max-width: 1400px){
 	.btn-log {
 		padding: 4px 7px; 
-		font-size: 0.8em;
+		font-size: 1em;
 	}
 }
-@media (max-width: 992px) {
+@media (min-width: 479px) and (max-width: 993px){
 	.btn-log {
 		padding: 3px 5px; 
 		font-size: 0.58em;
 	}
 }
-.btn-log:hover, .btn-log-active {
-	background-color: transparent;
-	color: inherit;
-	border-bottom: 1.5px solid white !important;
-	border-top: 1.5px solid white !important;
+
+.btn-log-xs:hover {
+	background-color: transparent !important;
+	color: rgba(250,250,250,1) !important;
+	border-bottom: 1.5px solid transparent !important;
+	border-top: 1.5px solid transparent !important;
 }
+.btn-log-xs, .btn-log-xs:focus {
+	text-align: center !important;
+	width: 100% !important;
+	outline:none;
+	margin: 1px !important;
+	color: rgba(250,250,250,0.7) !important;
+	background-color: transparent !important;
+	border-radius: 0 !important;
+	border-bottom: 1.5px solid transparent !important;
+	border-top: 1.5px solid transparent !important;
+	padding: 5px 9px !important; 
+	font-size: 1.4em !important;
+}
+
+.btn-log-xs-spe:hover {
+	background-color: transparent !important;
+	color: rgba(250,250,250,1) !important;
+	border-bottom: 1.5px solid transparent !important;
+	border-top: 1.5px solid transparent !important;
+}
+.btn-log-xs-spe, .btn-log-xs-spe:focus {
+	text-align: center !important;
+	outline:none;
+	margin: 1px !important;
+	color: rgba(250,250,250,0.7) !important;
+	background-color: transparent !important;
+	border-radius: 0 !important;
+	border-bottom: 1.5px solid transparent !important;
+	border-top: 1.5px solid transparent !important;
+	padding: 5px 9px !important; 
+	font-size: 1.4em !important;
+}
+
+
 .top_button {
 	margin-bottom: 6px;
 }
 
-.language_box {
-	float: left;
-}
 @media (min-width: 1401px) {
 	.language_flag {
 	  width: 25px;
@@ -488,7 +538,7 @@ strong {
 		margin-right: 2px;
 	}
 }
-@media (max-width: 992px) {
+@media (min-width: 479px) and (max-width: 992px) {
 	.language_flag {
 	  width: 16px;
 	}
@@ -503,19 +553,30 @@ strong {
 	opacity: 0.4;
 }
 
-.language_selection:hover {
+.language_selection:hover, .language_selection_xs:hover, .language_active, .language_active_xs {
 	opacity: 1;
 }
 
-.language_selection, .language_selection:hover {
+.language_selection, .language_selection:hover, .language_selection_xs, .language_selection_xs:hover {
 	-webkit-transition: 0.3s;
 	-moz-transition: 0.3s;
 	-o-transition: 0.3s;
 	-ms-transition: 0.3s;
 }
-.language_active {
-	opacity: 1;
+
+.language_flag_xs {
+  width: 30px;
 }
+.language_box_xs {
+	margin: 0 !important;
+	padding: 0 !important;
+}
+.language_selection_xs {
+	margin-left: 15px;
+	margin-right: 15px;
+	opacity: 0.5;
+}
+
 
 .cart_button {
 
@@ -526,17 +587,17 @@ strong {
 .number_notif {
 	background-color: white;
 	color: rgba(41,41,41,0.95);
-	/*font-size: 1em;*/
+	font-size: 1em;
 	text-align: center;
 	margin-left: 5px;
 	position: relative;
-	top: -1px;
 }
 @media (min-width: 1401px) {
 	.number_notif {
 		width: 20px;
 		height: 20px;
 		border-radius: 10px;
+		top: -1px;
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
@@ -544,14 +605,39 @@ strong {
 		width: 16px;
 		height: 16px;
 		border-radius: 8px;
+		top: -1px;
 	}
 }
-@media (max-width: 992px) {
+@media (min-width: 479px) and (max-width: 992px) {
 	.number_notif {
 		width: 12px;
 		height: 12px;
 		border-radius: 6px;
+		top: -1px;
 	}
+}
+.number_notif_XS {
+	background-color: white;
+	color: rgba(41,41,41,0.95);
+	font-size: 1em;
+	text-align: center;
+	margin-left: 5px;
+	position: relative;
+	width: 30px !important;
+	height: 30px !important;
+	border-radius: 15px !important;
+}
+.number_notif_XS_bis {
+	background-color: white;
+	color: rgba(41,41,41,0.95);
+	font-size: 1em;
+	text-align: center;
+	width: 20px !important;
+	height: 20px !important;
+	border-radius: 10px !important;
+	position: relative;
+	top: 12px;
+	right: 12px;
 }
 
 #social_media {	
@@ -612,10 +698,10 @@ strong {
 		height: 30px;	
 	}
 }
-@media (max-width: 992px) {
+@media (min-width: 479px) and (max-width: 992px) {
 	#social_media {
 		left: -60.5px;
-		font-size: 0.8em;
+		font-size: 0.7em;
 	}
 	.social_label {
 		width: 60px;
@@ -675,6 +761,7 @@ strong {
 	background-color: transparent;
 	display: inline-block;
 }
+
 .social_fb {
 	background-image: url('../img/system/social/fb.png');
 	background-size: 100%;
@@ -686,6 +773,47 @@ strong {
 .social_mail {
 	background-image: url('../img/system/social/mail.png');
 	background-size: 100%;
+}
+
+.social_list_xs {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+.social_list_xs li {
+	display: inline-block;
+}
+.social_item_xs, .social_item_spe_xs {
+	margin: 0 15px;
+	padding: 0;
+}
+.social_item_xs {
+	background: rgba(250,250,250,0.85); /*rgba(40,40,40,0.95);*/
+}
+.social_item_xs:hover {
+	background: rgba(215,215,215,1); /*rgba(40,40,40,0.95);*/
+}
+.social_item_spe_xs {
+	color: white !important;
+	background-color: rgba(200,50,20,0.85);
+}
+.social_item_spe_xs:hover {
+	color: white !important;
+	background-color: rgba(200,50,30,1);
+}
+.social_icon_xs
+{	
+	margin: 0 !important;
+	background-color: transparent;
+	display: inline-block;
+}
+.social_icon_xs {
+	width: 32px !important;
+	height: 32px !important;
+}
+.social_item_xs, .social_item_spe_xs {
+	width: 32px !important;
+	height: 32px !important;
 }
 
 #button_to_top {
@@ -709,7 +837,6 @@ strong {
 	color: rgba(41,41,41,0.95);
 	margin-left: 10px;
 	margin-right: 10px;
-	/*font-size : 1.2em;*/
 	background-color: transparent;
 	/*border: 1px solid white;*/
 	border-radius: 0;
@@ -719,6 +846,25 @@ strong {
 	/*background-color: rgba(0,0,0,0.5);*/
 	color: rgba(41,41,41,0.95);
 	border: 1.5px solid rgba(41,41,41,0.95);
+}
+
+#mobile_nav {
+	z-index: 30;
+}
+#mobile_nav ul {
+	padding: 0;
+	margin: 0;
+}
+#mobile_nav ul li {
+	width: 100%;
+	text-align: center;
+	list-style-type: none !important;
+}
+.divider-lbf {
+	padding: 0 !important;
+	margin: 8px 0 !important;
+	border-bottom: 1px solid rgba(200,200,200,0.4);
+	z-index: 31;
 }
 
 
@@ -737,13 +883,13 @@ strong {
 }
 
 #sessionFlash {
-	position: absolute;
+	position: fixed;
 	bottom : 10px;
 	text-align: center;
 	margin: auto;
 	display: none;
 	z-index: 99999;
-	/*font-size: 1.3em;*/
+	font-size: 1em;
 	width: 100% !important;
 }
 .alert {
@@ -801,10 +947,11 @@ strong {
 	}
 }
 .logo_header_sm_img {
-	width: 24%;
+	width: 125px !important;
 	position: absolute;
 	top: 6px;
 	left: 6px;
+	z-index: 99999 !important ;
 }
 
 .presentation_photos {
@@ -813,8 +960,13 @@ strong {
 .content_presentation {
 	margin-bottom: 0;
 	border-bottom: 5px solid rgba(41,41,41,0.95); /* #d10909 */
-	/*top: -20px;*/
 	z-index: 10 !important;
+}
+@media (max-width: 478px) {
+	.content_presentation {
+		position: relative;
+		top: 20px;
+	}
 }
 
 .presentation_img {
@@ -824,7 +976,7 @@ strong {
 .captionOrange, .captionrgba(41,41,41,0.95)
 {
     color: #fff;
-    /*font-size: 20px;*/
+    font-size: 20px;
     line-height: 30px;
     text-align: center;
     border-radius: 4px;
@@ -836,7 +988,7 @@ strong {
 }
 .captionrgba(41,41,41,0.95)
 {
-	/*font-size:16px;*/
+	font-size:16px;
     background: #000;
     background-color: rgba(0, 0, 0, 0.8);
 }
@@ -914,6 +1066,9 @@ a.captionOrange:hover
 .icon_presentation {
 	width: 40%;
 }
+.icon_presentation_xs {
+	width: 90%;
+}
 .sep_presentation {
 	padding: 0 !important;
 	margin: 5px 0 5px 0 !important;
@@ -966,14 +1121,14 @@ a.captionOrange:hover
 .modal-footer {
 	padding: 5px !important;
 }
-/*.modal-backdrop {
+.modal-backdrop {
   z-index: -1;
-}*/
+}
 .btn-modal {
 	margin-top: 10px;
 	margin-left: 10px;
 	margin-right: 10px;
-	/*font-size : 1.1em;*/
+	font-size : 1em;
 	background-color: transparent;
 	/*border: 1px solid white;*/
 	border-radius: 0;
@@ -987,7 +1142,12 @@ a.captionOrange:hover
 
 .nav-tabs {
 	margin-top: 0 !important;
-	/*font-size: 1.5em;*/
+	font-size: 1em;
+}
+@media (max-width: 992px) {
+	.nav-tabs {
+		font-size: 0.9em;
+	}
 }
 .nav-tabs li {
 	width: 23%;
@@ -1010,7 +1170,22 @@ a.captionOrange:hover
 	color: rgba(41,41,41,0.95);
 }
 .tab-content {
-	/*font-size: 1.1em;*/
+	font-size: 1em;
+}
+@media (max-width: 992px) {
+	.tab-content {
+		font-size: 0.8em !important;
+	}
+}
+.tab-pane ul, .tab_select {
+	font-size: 1em;
+}
+@media (max-width: 992px) {
+	.tab-pane ul, .tab_select {
+		padding: 0 !important;
+		margin: 0 !important;
+		font-size: 0.8em !important;
+	}
 }
 
 .btn_right_arrow {
@@ -1029,22 +1204,47 @@ a.captionOrange:hover
 	height: 30px;
 	margin-left: 10%;
 	margin-top: 3px;
-	/*font-size : 1.1em;*/
 	background-color: transparent;
-	padding: 4px 10px 6px 10px;
-	border-radius: 0px;
-	border-bottom: 1.5px solid transparent;
-	border-top: 1.5px solid transparent;
+	padding: 6px 10px;
+	border-radius: 5px;
 	color: rgba(41,41,41,0.95);
 }
-.btn-choice:hover {
+.btn-choice:hover, .tabbable .active .btn-choice {
 	background-color: rgba(100,100,100,0.2);
 	color: rgba(41,41,41,0.95);
 }
-.tabbable .active .btn-choice {
+@media (min-width: 1401px) {
+	.btn-choice {
+		font-size : 1em;
+	}
+}
+@media (min-width: 993px) and (max-width: 1400px){
+	.btn-choice {
+		font-size : 1em;
+	}
+}
+@media (min-width: 479px) and (max-width: 992px) {
+	.btn-choice {
+		font-size : 1.4em;
+	}
+}
+
+.btn-choice-xs {
+	text-align: left;
+	width: 100%;
+	height: 30px;
+	margin-top: 1px;
+	font-size : 1.5em !important;
 	background-color: transparent;
+	padding: 6px 8px;
+	border-radius: 4px;
 	color: rgba(41,41,41,0.95);
 }
+.btn-choice-xs:hover, .tabbable .active .btn-choice-xs {
+	background-color: rgba(100,100,100,0.2);
+	color: rgba(41,41,41,0.95);
+}
+
 .inner_arrow {
 	display: inline-block;
 	opacity: 0;
@@ -1067,14 +1267,22 @@ a.captionOrange:hover
 	cursor: pointer;
 }*/
 .small_quote {
-	/*font-size: 0.7em;*/
+	font-size: 0.7em;
 	font-style: italic;
 	text-align: center;
 }
 
-.sep_dotted {
+.sep_dotted_right {
 	border-right: 1px dotted rgba(41,41,41,0.5);
 }
+.creator_padding {
+	padding: 8px 0 !important;
+	margin: 0;
+}
+.sep_dotted_bottom {
+	border-bottom: 1px dotted rgba(41,41,41,0.5);
+}
+
 .creator_img {
 	border-radius: 50%;
 	border: 1px solid rgba(41,41,41,0.5);
@@ -1083,40 +1291,124 @@ a.captionOrange:hover
 	margin-bottom: 20px;
 	margin-top: 20px;
 }
+.creator_img_xs {
+	border-radius: 50%;
+	border: 1px solid rgba(41,41,41,0.5);
+	width: 90%;
+	margin-top: 0px;
+	margin-bottom: 10px;
+}
 
-.add_buttons {
-	padding: 2px !important;
+@media (max-width: 478px) {
+	.product_info_xs {
+		font-size: 1.2em;
+	}
+	.tab-pane {
+		padding: 0 !important;
+		margin: 0 !important;
+	}
+}
+
+.add_buttons, .add_buttons_XS {
+	margin: 0;
 	text-align: center;
-	width: 30px;
-	height: 30px;
-	/*font-size: 1.3em !important;*/
+	font-size: 1.3em !important;
 	color: rgba(41,41,41,0.95);
 	background-color: transparent;
 	border : 1px solid rgba(41,41,41,0.95);
-	border-radius: 15px;
 	position: relative;
 	top: 5px;
 }
+
+.add_button_plus {
+	border: none;
+	background-color: transparent !important;
+	box-shadow: none;
+	background-image: url('../img/system/cart/add_button_plus.png');
+	background-size: 100%;
+	opacity: 0.5;
+}
+.add_button_plus:hover, .add_button_plus:active {
+	opacity: 1;
+}
+.add_button_plus, .add_button_plus:focus {
+	outline:none;
+	border: none;
+	background-color: transparent !important;
+	box-shadow: none;
+}
+.add_button_minus {
+	border: none;
+	background-color: transparent !important;
+	box-shadow: none;
+	background-image: url('../img/system/cart/add_button_minus.png');
+	background-size: 100%;
+	opacity: 0.5;
+}
+.add_button_minus:hover, .add_button_minus:active {
+	opacity: 1;
+}
+.add_button_minus, .add_button_minus:focus {
+	outline:none;
+	border: none;
+	background-color: transparent !important;
+	box-shadow: none;
+}
+
 .add_buttons:hover, .add_buttons:active, .add_buttons:focus {
 	outline: none;
 	color: rgba(41,41,41,0.95);
-	background-color: rgba(100,100,100,0.2);
+	background-color: transparent !important;
 }
 .add_buttons:active {
 	top: 7px;
 }
+@media (min-width: 1401px) {
+	.add_buttons {
+		width: 30px;
+		height: 30px;
+	}
+}
+@media (min-width: 993px) and (max-width: 1400px){
+	.add_buttons {
+		width: 26px;
+		height: 26px;
+	}
+}
+@media (min-width: 479px) and (max-width: 992px) {
+	.add_buttons {
+		width: 20px;
+		height: 20px;
+	}
+}
+.add_buttons_XS {
+	width: 30px !important;
+	height: 30px !important;
+	margin-left: 5px;
+	margin-right: 5px;
+	top: 8px !important;
+}
+
 .counter_info_divs {
 	font-style: italic;
-	font-weight: 900;
-	/*font-size: 1em;*/
+	font-weight: 600;
+	font-size: 1.1em;
 	position: relative;
 	top: 10px;
-	/*border-bottom: 1px dotted white;*/
 }
+
+/*@media (max-width: 478px) {
+	.counter_info_divs_XS {
+		font-style: normal !important;
+		font-size: 1.6em !important;
+		padding: 3px 6px;
+		border: 1px dotted rgba(41,41,41,0.95) !important;
+	}
+}*/
 .counter_price_divs {
 	color: white;
-	font-weight: 900;
-	/*font-size: 1.2em;*/
+	font-weight: 600;
+	font-size: 1.1em;
 	position: relative;
 	top: 5px;
 	background-color: rgba(41,41,41,0.5);
@@ -1167,22 +1459,26 @@ a.captionOrange:hover
 	border: 1px solid rgba(41,41,41,0.5);
 	margin: 10px;
 	min-height: 30px;
-	width: 50%;
-	margin-left: 25%;
 }
 @media (min-width: 1401px) {
 	.cart_price {
-		/*font-size: 1.2em;*/
+		font-size: 1.2em;
+		width: 50%;
+		margin-left: 25%;
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	.cart_price {
-		/*font-size: 1.1em;*/
+		font-size: 1.1em;
+		width: 60%;
+		margin-left: 20%;
 	}
 }
 @media (max-width: 992px) {
 	.cart_price {
-		/*font-size: 1em;*/
+		font-size: 1em;
+		width: 80%;
+		margin-left: 10%;
 	}
 }
 
@@ -1191,9 +1487,28 @@ a.captionOrange:hover
 }
 
 .bio {
-	/*font-size: 1.3em !important;*/
 	line-height: 130%;
 	text-align: justify;
+}
+@media (min-width: 1401px) {
+	.bio {
+		font-size: 1.2em;
+	}
+}
+@media (min-width: 993px) and (max-width: 1400px){
+	.bio {
+		font-size: 1.1em;
+	}
+}
+@media (min-width: 479px) and (max-width: 992px) {
+	.bio {
+		font-size: 0.9em;
+	}
+}
+@media (max-width: 478px) {
+	.bio {
+		font-size: 0.6em;
+	}
 }
 
 /* ------------------------------------------------------ Login ------------------------------------------------------ */
@@ -1206,15 +1521,25 @@ a.captionOrange:hover
 	border: 1px solid rgba(41,41,41,0.5);
 	overflow: scroll !important;
 }
+@media (min-width: 993px) {
+	#login_section {
+		width: 60%;
+		margin-left: 20%;
+	}
+}
+@media (max-width: 992px) {
+	#login_section {
+		width: 96%;
+		margin-left: 2%;
+	}
+	#login_content {
+		margin-top: 20px;
+	}
+}
 #login_content {
 	min-height: 100px;
 }
-.login_content_font_size {
-	/*font-size: 1.3em !important;*/
-}
-.login_content_font_size label,  .login_content_font_size input {
-	/*font-size: 0.9em !important;*/
-}
+
 .login_titles {
 	margin: 0;
 	padding: 8px;
@@ -1245,17 +1570,22 @@ a.captionOrange:hover
 }
 @media (min-width: 1401px) {
 	.btn-login {
-		/*font-size: 1.3em;*/
+		font-size: 1.1em;
 	}
 }
 @media (min-width: 993px) and (max-width: 1400px){
 	.btn-login {
-		/*font-size: 1.1em;*/
+		font-size: 1em;
 	}
 }
-@media (max-width: 992px) {
+@media (min-width: 479px) and (max-width: 992px){
 	.btn-login {
-		/*font-size: 0.9em;*/
+		font-size: 1em;
+	}
+}
+@media (max-width: 478px) {
+	.btn-login {
+		font-size: 1.4em;
 	}
 }
 .btn-login:hover, .btn-login-active {
@@ -1367,9 +1697,19 @@ a.captionOrange:hover
 
 .address_box {
 	text-align: center;
-	margin-left: 35%;
-	width: 30%;
 	border: 1px dotted rgba(41,41,41,0.5);
+}
+@media (min-width: 993px) {
+	.address_box {
+		margin-left: 35%;
+		width: 30%;
+	}
+}
+@media (max-width: 992px) {
+	.address_box {
+		margin-left: 25%;
+		width: 50%;
+	}
 }
 
 .border_white {
@@ -1379,20 +1719,24 @@ a.captionOrange:hover
 	width: 30%;
 	text-align: center;
 }
-
-@media (min-width: 1401px) {
-	.cart_content {
-		/*font-size: 1.3em;*/
-	}
+.border_white_xs {
+	border: 1px solid rgba(41,41,41,0.5);
+	padding: 5px;
+	margin: 0;
+	width: 100%;
+	text-align: center;	
 }
-@media (min-width: 993px) and (max-width: 1400px){
+
+@media (min-width: 993px) {
 	.cart_content {
-		/*font-size: 1.1em;*/
+		width: 80%;
+		margin-left: 10%;
 	}
 }
 @media (max-width: 992px) {
 	.cart_content {
-		/*font-size: 0.9em;*/
+		width: 92%;
+		margin-left: 4%;
 	}
 }
 
@@ -1568,6 +1912,19 @@ a.captionOrange:hover
 	margin-left: 20%;
 }
 .icon_presentation_footer {
-	margin-left: 10%;
-	width: 80%;
+	width: 60%;
+}
+.h2_footer {
+	margin-top: 2px !important;
+	padding: 0 !important;
+	margin-bottom: 7px !important;
+}
+.submit_send_footer {
+	margin-top: 7px !important;
+	margin-bottom: 7px !important;
+}
+.sep_presentation_footer {
+	padding: 0px !important;
+	margin: 5px 0 !important;
+	border-bottom: 1px dotted white;
 }
